--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.5",
     "classnames": "^2.5.1",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.2",
