--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,12 +16,12 @@
     "axios": "^1.7.5",
     "classnames": "^2.5.1",
     "jwt-decode": "^4.0.0",
+    "markdown-to-jsx": "^7.5.0",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-big-calendar": "^1.13.2",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.0",
     "react-social-media-embed": "^2.5.13",
     "tailwindcss": "^3.4.10"
