--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@ django-cors-headers==4.4.0
 django-filter==24.3
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
+gunicorn==23.0.0
+packaging==24.1
 PyJWT==2.9.0
 PyMySQL==1.1.1
 python-dotenv==1.0.1
