--- a/slz-docker/docker-compose.yml
+++ b/slz-docker/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       dockerfile: ./slz-docker/frontend/Dockerfile
     ports: 
       - 80:80
+    depends_on:
+      - backend
   
   backend:
     build: 
@@ -24,7 +26,7 @@ services:
       - mariavol:/var/lib/mysql
       - ./db:/mnt
     ports:
-      - "3306:3306"
+      - "3307:3306"
     env_file:
       - ./db/.env
 
