--- a/slz-docker/backend/Dockerfile
+++ b/slz-docker/backend/Dockerfile
@@ -11,6 +11,7 @@ COPY ./backend/ .
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
+RUN python manage.py migrate
 # CMD ["python", "manage.py", "runserver", "0.0.0.0:8000"]
 
 CMD ["gunicorn", "--bind", "0.0.0.0:8000", "backend.wsgi"]
