--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mdxeditor/editor": "^3.11.3",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.5",
     "classnames": "^2.5.1",
     "jwt-decode": "^4.0.0",
