--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.5",
     "classnames": "^2.5.1",
+    "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
     "markdown-to-jsx": "^7.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.26.0",
     "react-social-media-embed": "^2.5.13",
     "tailwindcss": "^3.4.10"
