--- a/slz-docker/docker-compose.yml
+++ b/slz-docker/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
 
   frontend:
@@ -8,9 +6,26 @@ services:
       dockerfile: ./slz-docker/frontend/Dockerfile
     ports: 
       - 80:80
+      - 443:443
+    volumes:
+      - ./etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       - backend
+      
   
+  certbot:
+    profiles: ["cert"]
+    image: certbot/dns-route53:latest
+    volumes:
+      - ./etc/letsencrypt:/etc/letsencrypt
+      - ./certbot/data:/var/www/certbot
+    env_file:
+      - ./frontend/.env
+    command: >-
+          certonly --dry-run --dns-route53 --webroot-path=/var/www/certbot
+          --email adilkhan49@hotmail.com --agree-tos 
+          -d soasliberatedzone.org -d www.soasliberatedzone.org
+
   backend:
     build: 
       context: ../
