--- a/slz-docker/frontend/react.conf
+++ b/slz-docker/frontend/react.conf
@@ -3,7 +3,32 @@ server {
     listen 80;
     listen [::]:80;
     root /var/www/html/my-react-app/dist;
-    # server_name 35.176.139.123;
+    server_name soasliberatedzone.org www.soasliberatedzone.org;
+    server_tokens off;
+
+    location ~ /.well-known/acme-challenge {
+        allow all;
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://[domain-name]$request_uri;
+    }
+}
+
+
+server {
+    listen 443 default_server ssl;
+    listen [::]:443 default_server ssl;
+    http2 on;
+
+    server_name soasliberatedzone.org;
+
+    # ssl_certificate /etc/nginx/ssl/live/soasliberatedzone.org/fullchain.pem;
+    # ssl_certificate_key /etc/nginx/ssl/live/soasliberatedzone.org/privkey.pem;
+    
+    ssl_certificate /etc/letsencrypt/live/soasliberatedzone.org/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/soasliberatedzone.org/privkey.pem;
 
     location / {
         try_files $uri /index.html;
