--- a/slz-docker/frontend/react.conf
+++ b/slz-docker/frontend/react.conf
@@ -12,7 +12,7 @@ server {
     }
 
     location / {
-        return 301 https://[domain-name]$request_uri;
+        return 301 https://soasliberatedzone.org$request_uri;
     }
 }
 
