--- a/slz-docker/frontend/react.conf
+++ b/slz-docker/frontend/react.conf
@@ -30,6 +30,8 @@ server {
     ssl_certificate /etc/letsencrypt/live/soasliberatedzone.org/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/soasliberatedzone.org/privkey.pem;
 
+    root /var/www/html/my-react-app/dist;
+    
     location / {
         try_files $uri /index.html;
     }
