--- a/slz-docker/frontend/Dockerfile
+++ b/slz-docker/frontend/Dockerfile
@@ -1,10 +1,10 @@
-FROM node:16-alpine as build
+FROM node:16-alpine AS build
 WORKDIR /app
 COPY ./frontend .
 RUN npm install
 RUN npm run build
 
-FROM python:3.11-slim as djangostatic
+FROM python:3.11-slim AS djangostatic
 WORKDIR /app
 COPY ./requirements.txt requirements.txt
 RUN pip install -r requirements.txt
@@ -15,5 +15,6 @@ FROM nginx:stable-alpine
 COPY --from=build /app/dist var/www/html/my-react-app/dist
 COPY --from=djangostatic /app/staticfiles /home/app/django-app/staticfiles/
 COPY slz-docker/frontend/react.conf /etc/nginx/conf.d/default.conf
+
 EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
