--- a/slz-docker/frontend/react.conf
+++ b/slz-docker/frontend/react.conf
@@ -1,3 +1,6 @@
+error_log /var/log/nginx/error.log;
+access_log /var/log/nginx/access.log;
+
 server {
     
     listen 80;
@@ -31,6 +34,8 @@ server {
     ssl_certificate_key /etc/letsencrypt/live/soasliberatedzone.org/privkey.pem;
 
     root /var/www/html/my-react-app/dist;
+
+    access_log  /var/log/nginx/access.log;
     
     location / {
         try_files $uri /index.html;
