--- a/slz-docker/docker-compose.yml
+++ b/slz-docker/docker-compose.yml
@@ -9,6 +9,7 @@ services:
       - 443:443
     volumes:
       - ./etc/letsencrypt:/etc/letsencrypt:ro
+      - ./logs:/var/log/nginx/
     depends_on:
       - backend
       
